--- a/as.html
+++ b/as.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Hambatan Konduktor</title>
+    <title>Halaman Utama</title>
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,14 +105,14 @@
             align-items: center;
             justify-content: center;
             color: var(--text-color-light);
-            padding: 20px 15px;
+            padding: 15px 15px;
             border-radius: 12px;
             text-decoration: none;
             font-size: 1.1em;
             font-weight: bold;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
-            min-height: 100px;
+            **min-height: 80px; /* Tinggi tombol dikurangi di sini */**
             position: relative;
             overflow: hidden;
             z-index: 1;
@@ -307,7 +307,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Kalkulator Hambatan Konduktor v9</h1>
+        <h1>Halaman Utama</h1>
         <hr>
         <div class="button-grid">
             <a href="hk_iec.html" class="button button-iec">
