--- a/as.html
+++ b/as.html
@@ -81,7 +81,6 @@
             transition: all 0.3s ease;
             font-weight: 600;
             font-size: 1.1em;
-            margin-bottom: 15px; /* Jarak antar tombol di mobile */
             width: 100%; /* Lebar penuh di grid */
         }
 
@@ -104,7 +103,7 @@
         .btn-custom-3 { background: linear-gradient(135deg, #9b59b6, #8e44ad); } /* Ungu Amethyst */
         .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); } /* Oranye Labu */
         .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); } /* Kuning Cerah */
-        .btn-custom-6 { background: linear: gradient(135deg, #e74c3c, #c0392b); } /* Merah Bata */
+        .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); } /* Merah Bata */
 
         /* Mode Toggle Button Styling */
         .mode-toggle-wrapper {
@@ -163,12 +162,13 @@
             color: #bdc3c7;
         }
 
-        /* Responsive adjustments for smaller screens (Bootstrap handles most of this) */
+        /* Responsive adjustments for smaller screens */
         @media (max-width: 576px) { /* Extra small devices (portrait phones) */
             .project-button {
                 padding: 15px 10px;
                 min-height: 100px; /* Sedikit lebih kecil untuk layar sangat kecil */
                 font-size: 1em;
+                margin-bottom: 15px; /* Tambahkan jarak antar tombol */
             }
             .project-button i {
                 font-size: 2em;
@@ -185,7 +185,7 @@
     <div class="container-fluid">
         <h1 class="text-center">Daftar Proyek Saya</h1>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-2 g-3">
             <div class="col">
                 <a href="project1.html" class="project-button btn-custom-1">
                     <i class="fas fa-microchip"></i>
