--- a/as.html
+++ b/as.html
@@ -188,37 +188,37 @@
         <div class="row row-cols-2 g-3">
             <div class="col">
                 <a href="project1.html" class="project-button btn-custom-1">
-                    <i class="fas fa-microchip"></i>
+                    <i class="fas fa-calculator" aria-hidden="true"></i>
                     <span>Proyek 1</span>
                 </a>
             </div>
             <div class="col">
                 <a href="project2.html" class="project-button btn-custom-2">
-                    <i class="fas fa-calculator"></i>
+                    <i class="fas fa-plug" aria-hidden="true"></i>
                     <span>Proyek 2</span>
                 </a>
             </div>
             <div class="col">
                 <a href="project3.html" class="project-button btn-custom-3">
-                    <i class="fas fa-laptop-code"></i>
+                    <i class="fas fa-thermometer-half" aria-hidden="true"></i>
                     <span>Proyek 3</span>
                 </a>
             </div>
             <div class="col">
                 <a href="project4.html" class="project-button btn-custom-4">
-                    <i class="fas fa-robot"></i>
+                    <i class="fas fa-ruler" aria-hidden="true"></i>
                     <span>Proyek 4</span>
                 </a>
             </div>
             <div class="col">
                 <a href="project5.html" class="project-button btn-custom-5">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fas fa-flask" aria-hidden="true"></i>
                     <span>Proyek 5</span>
                 </a>
             </div>
             <div class="col">
                 <a href="project6.html" class="project-button btn-custom-6">
-                    <i class="fas fa-cloud"></i>
+                    <i class="fas fa-code" aria-hidden="true"></i>
                     <span>Proyek 6</span>
                 </a>
             </div>
